# itmo-haskell-course

./: .gitignore  itmo-haskell-course.cabal  kek.conf  shell.nix  stack.yaml  wow.conf
.stack-work/install/x86_64-linux-nix/lts-6.7/7.10.3/flag-cache/: HUnit-1.3.1.1-9ae4c2f31abd33c594f24f181b5de86a  QuickCheck-2.8.2-41e0a885d5f2f364641f2384fe2e5568  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  hspec-2.2.3-dcdc8c27ff2f42f6f504d68e8a0e282c  hspec-core-2.2.3-0d0f7f2c28d520582d7f41bc96e66357  hspec-discover-2.2.3-1212ed414497cc7e4453b6a5e5f67ade  hspec-expectations-0.7.2-3fed3e5688369db6b3c656c4bae160d1  itmo-haskell-course-0.1.0.0-990e75e235f577772883b11c7f24cc08  itmo-haskell-course-0.1.0.0-99469813486433df92f4bfef98eebd5b  itmo-haskell-course-0.1.0.0-ee007c4c9370e9da01337cca09fae5e4  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  quickcheck-io-0.1.2-02f7ea07dfeae76d369dd9ba335bec00  random-1.1-7d035f9e510822cd64834106e4acc4b7  setenv-0.1.1.3-4d70f2e61b1bd0645017164a0ca26ee9  stm-2.4.4.1-7050c728ed5b2315e2c6b56d8bf9837f  tf-random-0.5-1a425ebf0c2fc5c4dbafe3974fdc2617
.stack-work/install/x86_64-linux-nix/lts-6.7/7.10.3/lib/x86_64-linux-ghc-7.10.3/itmo-haskell-course-0.1.0.0-3jdjN6JgnDTFbxnus2BZhp/: Homework1.hi  Homework3.dyn_hi
.stack-work/install/x86_64-linux-nix/lts-6.7/7.10.3/lib/x86_64-linux-ghc-7.10.3/itmo-haskell-course-0.1.0.0-AgUyFMR0A7v8PCeJbbIyvY/: Homework1.dyn_hi  Homework1.hi  Homework2.dyn_hi  Homework2.hi  Homework3.dyn_hi  Homework3.hi
.stack-work/install/x86_64-linux-nix/lts-6.7/7.10.3/lib/x86_64-linux-ghc-7.10.3/itmo-haskell-course-0.1.0.0-AgUyFMR0A7v8PCeJbbIyvY/Homework1/: Task1.dyn_hi  Task1.hi  Task2.dyn_hi  Task2.hi  Task3.dyn_hi  Task3.hi
.stack-work/install/x86_64-linux-nix/lts-6.7/7.10.3/lib/x86_64-linux-ghc-7.10.3/itmo-haskell-course-0.1.0.0-AgUyFMR0A7v8PCeJbbIyvY/Homework2/: BonusTask.hi  Task1.dyn_hi  Task1.hi  Task2.dyn_hi  Task2.hi  Task3.dyn_hi  Task3.hi
.stack-work/install/x86_64-linux-nix/lts-6.7/7.10.3/lib/x86_64-linux-ghc-7.10.3/itmo-haskell-course-0.1.0.0-AgUyFMR0A7v8PCeJbbIyvY/Homework3/: Task2.dyn_hi  Task2.hi
.stack-work/install/x86_64-linux-nix/lts-6.7/7.10.3/lib/x86_64-linux-ghc-7.10.3/itmo-haskell-course-0.1.0.0-GsrN3xegqQOLy3uSgUdYJ7/: Homework1.dyn_hi  Homework1.hi  Homework2.dyn_hi  Homework2.hi
.stack-work/install/x86_64-linux-nix/lts-6.7/7.10.3/pkgdb/: itmo-haskell-course-0.1.0.0-211de61adabe879f59368b83783b1e25.conf  package.cache
Homework1/: Task1.hs  Task2.hs  Task3.hs
Homework2/: BonusTask.hs  Task1.hs  Task2.hs  Task3.hs
Homework3/: Task2.hs
app/: CfgCreator.hs  ExprParsing.hs  ThEnv.hs  Walker.hs
benchmark/: Benchmark.hs
benchmark/Bench/Homework3/: Task3Bench.hs
benchmark/Bench/Homework9/: Task1Bench.hs
src/: ControlWork1.hs  Homework1.hs  Homework10.hs  Homework2.hs  Homework3.hs  Homework4.hs  Homework5.hs  Homework6.hs  Homework7.hs  Homework8.hs  Homework9.hs
src/Homework1/: Task1.hs  Task2.hs  Task3.hs
src/Homework10/: .#Task1.hs  .#Task10.hs  Task1.hs  Task10.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs  Task9.hs
src/Homework2/: BonusTask.hs  Task1.hs  Task2.hs  Task3.hs
src/Homework3/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task4v1.hs  Task4v2.hs
src/Homework4/: State2.hs  Task1.hs  Task2.hs  Task4.hs
src/Homework4/Task3/: Classes.hs  FromFish.hs  FromJoin.hs  FromMonad.hs
src/Homework5/: Task1.hs  Task2.hs
src/Homework6/: Task1.hs  Task2.hs  Task3.hs  Task4.hs
src/Homework7/: Task1.hs  Task2.hs
src/Homework8/: Task1.hs  Task2.hs  Task3.hs
src/Homework9/: Task1.hs
test/Test/Homework3/: Task2.hs  Task2Spec.hs  Task3Spec.hs  Task4Spec.hs
