name:                itmo-haskell-course
version:             0.1.0.0
synopsis:            ITMO CTD Haskell course homeworks
description:         Please see README.md
homepage:            https://bitbucket.org/flyingleafe/itmo-haskell-course#readme
license:             BSD3
license-file:        LICENSE
author:              Dmitry Mukhutdinov
maintainer:          flyingleafe@gmail.com
copyright:           2016 Dmitry Mukhutdinov
category:            Education
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Homework1
                     , Homework2
                     , Homework3
                     , Homework4
                     , Homework5
                     , Homework6     
                     , Homework7
                     , Homework8
                     , Homework9
                     , Homework10
                     , ControlWork1
  other-modules:       Homework1.Task1
                     , Homework1.Task2
                     , Homework1.Task3
                     , Homework2.Task1
                     , Homework2.Task2
                     , Homework2.Task3
                     , Homework3.Task1
                     , Homework3.Task2
                     , Homework3.Task3
                     , Homework3.Task4
                     , Homework3.Task4v1
                     , Homework3.Task4v2
                     , Homework4.Task1
                     , Homework4.Task2
                     , Homework4.Task4
                     , Homework5.Task1
                     , Homework5.Task2
                     , Homework6.Task1
                     , Homework6.Task2
                     , Homework6.Task3
                     , Homework6.Task4
                     , Homework7.Task1
                     , Homework7.Task2
                     , Homework8.Task1
                     , Homework8.Task2
                     , Homework8.Task3
                     , Homework9.Task1
                     , Homework10.Task1
                     , Homework10.Task2
                     , Homework10.Task3
                     , Homework10.Task4
                     , Homework10.Task5
                     , Homework10.Task6
                     , Homework10.Task7
                     , Homework10.Task8
                     , Homework10.Task9
                     , Homework10.Task10
  build-depends:       base >= 4.7 && < 5
                     , array
                     , deepseq
                     , scientific
                     , random
                     , lens
                     , mtl
                     , text
                     , tagged
                     , transformers
                     , template-haskell
                     , filesystem-trees
                     , semigroups
                     , optparse-applicative
                     , containers
                     , megaparsec
                     , MissingH
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable cfg-creator
   hs-source-dirs:      app
   main-is:             CfgCreator.hs
   build-depends:       base
                      , itmo-haskell-course
   ghc-options:         -Wall -fno-warn-orphans
   default-extensions:  OverloadedStrings
                      , RecordWildCards
                      , DeriveDataTypeable
                      , GeneralizedNewtypeDeriving
   default-language:    Haskell2010

executable expr-parsing
   hs-source-dirs:      app
   main-is:             ExprParsing.hs
   build-depends:       base
                      , itmo-haskell-course
                      , text
                      , optparse-applicative
                      , megaparsec
   ghc-options:         -Wall -fno-warn-orphans
   default-extensions:  OverloadedStrings
                      , RecordWildCards
                      , DeriveDataTypeable
                      , GeneralizedNewtypeDeriving
   default-language:    Haskell2010

executable hw10-task2
   hs-source-dirs:      app
   main-is:             ThEnv.hs
   build-depends:       base
                      , itmo-haskell-course
   ghc-options:         -Wall -fno-warn-orphans
   default-extensions:  OverloadedStrings
                      , RecordWildCards
                      , DeriveDataTypeable
                      , GeneralizedNewtypeDeriving
   default-language:    Haskell2010

executable walker
   hs-source-dirs:      app
   main-is:             Walker.hs
   build-depends:       base
                      , itmo-haskell-course
   ghc-options:         -Wall -fno-warn-orphans
   default-extensions:  OverloadedStrings
                      , RecordWildCards
                      , DeriveDataTypeable
                      , GeneralizedNewtypeDeriving
   default-language:    Haskell2010

test-suite itmo-haskell-course-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Test.hs
   other-modules:       Spec
                      , Test.Homework3.Task2Spec
                      , Test.Homework3.Task3Spec
                      , Test.Homework3.Task4Spec
   build-depends:       base
                      , itmo-haskell-course
                      , QuickCheck >= 2.8.1
                      , hspec >= 2.2.2
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010

benchmark itmo-haskell-course-bench
   type: exitcode-stdio-1.0
   hs-source-dirs:      benchmark
   main-is:             Benchmark.hs
   other-modules:       Bench.Homework3.Task3Bench
                        Bench.Homework9.Task1Bench
   build-depends:       base
                      , array
                      , dlist
                      , itmo-haskell-course >= 0.1
                      , containers
                      , criterion
                      , QuickCheck >= 2.8.1
   ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/flyingleafe/itmo-haskell-course
